# voicerag

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
apps/agents/: Dockerfile  agent_logs.txt  livekit.toml  pyproject.toml  test_tts.py
apps/agents/agent/: tts_edge.py  voicerag.py  worker.py
apps/agents/agent/db/: database.py
apps/agents/agent/prompts/: voicerag.py
apps/agents/agent/tools/: knowledge.py
apps/backend/: Dockerfile  fly.toml  pyproject.toml  test_sig.py
apps/backend/app/: main.py
apps/backend/app/api/v1/routes/: ingest.py  livekit_token.py
apps/backend/app/core/: config.py
apps/backend/app/db/: run_migrations.py  session.py
apps/backend/app/db/migrations/: 001_initial.sql
apps/backend/app/services/ingest/: embedder.py  voicemaker.py
apps/frontend/: Dockerfile  components.json  fly.toml  next.config.ts  package.json  railway.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/dashboard/: layout.tsx
apps/frontend/app/dashboard/console/: page.tsx
apps/frontend/components/ui/: input.tsx  select.tsx  sheet.tsx  tabs.tsx
apps/frontend/lib/: api-client.ts
apps/frontend/public/: manifest.json
infra/: Caddyfile
infra/compose/: docker-compose.dev.yml
infra/deploy/: cloud-run.sh
infra/docker/: agents-base.Dockerfile  agents.Dockerfile  backend.Dockerfile  frontend.Dockerfile
infra/env/: agents.prod.env.example  backend.prod.env.example
(+4 files in other folders)
